syntax = "proto3";

package slack.proto.kaldb;

option java_package = "com.slack.kaldb.proto.metadata";

enum CacheSlotState {
  FREE = 0;
  ASSIGNED = 1;
  LOADING = 2;
  LIVE = 3;
  EVICT = 4;
  EVICTING = 5;
};

message CacheSlotMetadata {
  // Name of the cache slot
  string name = 1;

  // Unique ID of the replica
  string replicaId = 2;

  // State of the cache slot
  CacheSlotState cacheSlotState = 3;

  // Last updated timestamp
  int64 updatedTimeUtc = 4;
}

message ReplicaMetadata {
  // Name of the replica
  string name = 1;

  // Unique ID for the snapshot blob
  string snapshotId = 2;
}

message SnapshotMetadata {
  // Name of the snapshot
  string name = 1;
  // Permanent id for a blob. This id is used to uniquely identify the blob incase it get's copied around.
  string snapshotId = 2;

  // Path of the file stored in blobstore.
  string snapshotPath = 3;
  // earliest timestamp of the event in the snapshot file.
  int64 startTimeUtc = 4;
  // End or latest timestamp of the event in the snapshot file.
  int64 endTimeUtc = 5;

  // Kafka partitionId.
  string partitionId = 7;
  // Kafka offset when this snapshot was taken for that partition.
  int64 maxOffset = 6;
}

message SearchMetadata {
  // Name of search metadata
  string name = 1;

  // snapshot name
  string snapshotName = 2;

  // url
  string url = 3;
}
